# dev-setup

./: .gitignore  Brewfile  README.md  bootstrap.sh  brew.sh  install.sh  macos.sh
ghostty/: README.md  config
git/: README.md  gitconfig  gitconfig-personal  gitignore_global
macos/: README.md  revert.sh
nvim/: README.md  lazy-lock.json  lazyvim.json
shell/: README.md  starship.toml  zshrc
tmux/: README.md  tmux.conf
tui-setup/: Cargo.toml
tui-setup/src/: app.rs  events.rs  main.rs  state.rs
tui-setup/src/installer/: dotfiles.rs  homebrew.rs  macos.rs  mod.rs  post.rs
tui-setup/src/ui/: config.rs  confirm.rs  done.rs  mod.rs  progress.rs  selection.rs  theme.rs  welcome.rs
