[package]
name = "setup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
sysinfo = "0.32"
async-trait = "0.1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures = "0.3"
